feate(e2ee) add scope 3 Encrypted Message
